--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,37 @@
-/* место для вашего кода */
+.header {
+
+}
+
+
+.header__logo {
+
+}
+
+.header__logo-image {
+
+
+}
+
+.header__menu {
+
+}
+
+.header__links-list {
+
+}
+
+.header__links-list-item_no-bullit {
+
+}
+
+.header__links-list-item {
+
+}
+
+.header__link {
+
+}
+
+.header__link_active {
+    
+}
