--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,7 @@
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -49,6 +48,7 @@
 
 .header__link_active {
   text-decoration: none;
+  pointer-events: none;
 }
 
 .header__logo {
@@ -209,6 +209,7 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   padding: 50px 40px;
@@ -288,6 +289,9 @@
 }
 
 .about__text {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 25px;
   font-weight: 400;
   font-size: 20px;
   line-height: normal;
@@ -326,6 +330,7 @@
 
 .footer__menu-link_active {
   text-decoration: none;
+  pointer-events: none;
 }
 
 .footer__social-link {
@@ -340,7 +345,6 @@
   justify-self: end;
   align-items: center;
   gap: 20px 48px;
-  max-width: 240px;
   list-style: none;
 }
 
